[package]
name = "data_struct"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "array"
path = "src/array_example.rs"

[[bin]]
name = "vec"
path = "src/vec_example.rs"

[[bin]]
name = "queue_example"
path = "src/queue_example.rs"

[[bin]]
name = "queue_achieve"
path = "src/queue_achieve.rs"

[[bin]]
name= "deque_achieve"
path = "src/deque_achieve.rs"

[[bin]]
name = "deque_example"
path = "src/deque_example.rs"

[[bin]]
name = "link_example"
path = "src/link_example.rs"

[[bin]]
name = "link_achieve"
path = "src/link_achieve.rs"

[[bin]]
name = "slice_example"
path = "src/slice_example.rs"

[[bin]]
name = "string_example"
path = "src/string_example.rs"



[dependencies]
